kubernetes/prod/app-prod-api-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwi67-test-flask-deployment
  labels:
    app: dwi67-test-app
    username: dwi67
    env: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dwi67-test-app
      username: dwi67
      env: test
  template:
    metadata:
      labels:
        app: dwi67-test-app
        username: dwi67
        env: test
    spec:
      containers:
        - name: dwi67-test-flask
          imagePullPolicy: Always
          image: pranjaladhikari/diagnosis_app:1.0
          ports:
          - name: http
            containerPort: 5000
