kubernetes/prod/app-prod-wrk-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwi67-test-wrk-deployment
  labels:
    app: dwi67-test-wrk
    username: dwi67
    env: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dwi67-test-wrk
      username: dwi67
      env: test
  template:
    metadata:
      labels:
        app: dwi67-test-wrk
        username: dwi67
        env: test
    spec:
      containers:
        - name: dwi67-test-wrk
          image: pranjaladhikari/diagnosis_wrk:1.0
          imagePullPolicy: Always
