kubernetes/prod/app-prod-api-nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
    name: dwi67-test-service-nodeport
spec:
    type: NodePort
    selector:
        app: dwi67-test-app
    ports:
        - port: 5000
          targetPort: 5000
