kubernetes/prod/redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dwi67-test-redis-service
  labels:
    username: dwi67
    env: test
spec:
  type: ClusterIP
  selector:
    app: dwi67-test-redis
    username: dwi67
    env: test
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
