kubernetes/prod/app-prod-api-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dwi67-test-ingress
    annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "dwi67.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: dwi67-test-nodeport-service
              port:
                  number: 31587
